// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|Debate.Votes connection fetches 5 first votes associated to a debate with a cursor 1`] = `
Object {
  "node": Object {
    "votes": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyTWF4aW1l",
            },
            "createdAt": "2015-01-01 09:10:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwOQ==",
            "publishedAt": "2015-01-01 09:10:00",
            "value": "FOR",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyQWd1aQ==",
            },
            "createdAt": "2015-01-01 09:09:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwOA==",
            "publishedAt": "2015-01-01 09:09:00",
            "value": "FOR",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyVmluY2VudA==",
            },
            "createdAt": "2015-01-01 09:08:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNw==",
            "publishedAt": "2015-01-01 09:08:00",
            "value": "FOR",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyVmluY2VudA==",
            },
            "createdAt": "2015-01-01 09:07:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNg==",
            "publishedAt": "2015-01-01 09:07:00",
            "value": "FOR",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyT21hcg==",
            },
            "createdAt": "2015-01-01 09:06:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNQ==",
            "publishedAt": "2015-01-01 09:06:00",
            "value": "FOR",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      },
      "totalCount": 10,
    },
  },
}
`;

exports[`Internal|Debate.Votes connection fetches 5 next votes associated to a debate with a cursor 1`] = `
Object {
  "node": Object {
    "votes": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyVGhlbw==",
            },
            "createdAt": "2015-01-01 09:05:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNA==",
            "publishedAt": "2015-01-01 09:05:00",
            "value": "FOR",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VySnBlYw==",
            },
            "createdAt": "2015-01-01 09:04:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMw==",
            "publishedAt": "2015-01-01 09:04:00",
            "value": "AGAINST",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjc=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyTWlja2FlbA==",
            },
            "createdAt": "2015-01-01 09:03:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMg==",
            "publishedAt": "2015-01-01 09:03:00",
            "value": "FOR",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjg=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VySWFu",
            },
            "createdAt": "2015-01-01 09:02:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMQ==",
            "publishedAt": "2015-01-01 09:02:00",
            "value": "AGAINST",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjk=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyU3B5bA==",
            },
            "createdAt": "2015-01-01 09:01:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMA==",
            "publishedAt": "2015-01-01 09:01:00",
            "value": "FOR",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjk=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjU=",
      },
      "totalCount": 10,
    },
  },
}
`;

exports[`Internal|Debate.Votes connection fetches debate not voted by viewer 1`] = `
Object {
  "node": Object {
    "viewerHasVote": false,
    "viewerVote": null,
  },
}
`;

exports[`Internal|Debate.Votes connection fetches debate voted by viewer 1`] = `
Object {
  "node": Object {
    "viewerHasVote": true,
    "viewerVote": Object {
      "value": "FOR",
    },
  },
}
`;

exports[`Internal|Debate.Votes connection fetches votes associated to a debate and a FOR value with a cursor 1`] = `
Object {
  "node": Object {
    "votes": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyTWF4aW1l",
            },
            "createdAt": "2015-01-01 09:10:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwOQ==",
            "publishedAt": "2015-01-01 09:10:00",
            "value": "FOR",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyQWd1aQ==",
            },
            "createdAt": "2015-01-01 09:09:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwOA==",
            "publishedAt": "2015-01-01 09:09:00",
            "value": "FOR",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyVmluY2VudA==",
            },
            "createdAt": "2015-01-01 09:08:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNw==",
            "publishedAt": "2015-01-01 09:08:00",
            "value": "FOR",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyVmluY2VudA==",
            },
            "createdAt": "2015-01-01 09:07:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNg==",
            "publishedAt": "2015-01-01 09:07:00",
            "value": "FOR",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyT21hcg==",
            },
            "createdAt": "2015-01-01 09:06:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNQ==",
            "publishedAt": "2015-01-01 09:06:00",
            "value": "FOR",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjU=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyVGhlbw==",
            },
            "createdAt": "2015-01-01 09:05:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwNA==",
            "publishedAt": "2015-01-01 09:05:00",
            "value": "FOR",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjY=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyTWlja2FlbA==",
            },
            "createdAt": "2015-01-01 09:03:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMg==",
            "publishedAt": "2015-01-01 09:03:00",
            "value": "FOR",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjc=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VyU3B5bA==",
            },
            "createdAt": "2015-01-01 09:01:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMA==",
            "publishedAt": "2015-01-01 09:01:00",
            "value": "FOR",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjc=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      },
      "totalCount": 8,
    },
  },
}
`;

exports[`Internal|Debate.Votes connection fetches votes associated to a debate and an AGAINST value with a cursor 1`] = `
Object {
  "node": Object {
    "votes": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VySnBlYw==",
            },
            "createdAt": "2015-01-01 09:04:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMw==",
            "publishedAt": "2015-01-01 09:04:00",
            "value": "AGAINST",
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "author": Object {
              "id": "VXNlcjp1c2VySWFu",
            },
            "createdAt": "2015-01-01 09:02:00",
            "debate": Object {
              "id": "RGViYXRlOmRlYmF0ZUNhbm5hYmlz",
            },
            "id": "RGViYXRlVm90ZToxMzAwMQ==",
            "publishedAt": "2015-01-01 09:02:00",
            "value": "AGAINST",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      },
      "totalCount": 2,
    },
  },
}
`;

exports[`Internal|Debate.Votes connection fetches votes counters associated to a debate 1`] = `
Object {
  "node": Object {
    "againstVotes": Object {
      "totalCount": 2,
    },
    "allVotes": Object {
      "totalCount": 10,
    },
    "forVotes": Object {
      "totalCount": 8,
    },
  },
}
`;
